--- a/WebConnector/webpages/index.html
+++ b/WebConnector/webpages/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8"/>
-	<title>Startseite - Webinterface</title>
+	<title>Home - Webinterface</title>
 	<link rel="stylesheet" href="stylesheet.css"/>
 </head>
 <body>
@@ -18,7 +18,9 @@
 	<div>
 		<h1>Home</h1>
 		<p>
-			Welcome to the Webinterface
+			Welcome to the Webinterface.<br />
+			At the moment %players_online% player(s) are online.<br />
+			The most players today were %max_players% players.
 		</p>
 	</div>
 </body>
