--- a/WebConnector/webpages/playerinfo.html
+++ b/WebConnector/webpages/playerinfo.html
@@ -1,17 +1,18 @@
 <!doctype html>
 <html>
 <head>
-    	<meta charset="utf-8" />
-      <link rel="stylesheet" href="stylesheet.css" />
-      <script type="text/javascript" src="http://code.jquery.com/jquery-3.2.1.min.js"></script>
+  <meta charset="utf-8" />
+  <title>Playerinfo - Webinterface</title>
+  <link rel="stylesheet" href="stylesheet.css" />
+  <script type="text/javascript" src="http://code.jquery.com/jquery-3.2.1.min.js"></script>
 </head>
 <body onload="load()">
   <nav>
 		<ul>
-			<li><a href="index.html">Startseite</a></li>
-			<li><a href="console.html">Konsole</a></li>
-			<li><a href="#">Spieler</a></li>
-      <li><a href="#">%account_name%</a></li>
+			<li><a href="index.html">Home</a></li>
+			<li><a href="console.html">Console</a></li>
+			<li><a href="players.html">Players</a></li>
+      <li><a href="accounts.html">%account_name%</a></li>
 		</ul>
 	</nav>
 
