--- a/WebConnector/webpages/players.html
+++ b/WebConnector/webpages/players.html
@@ -1,9 +1,10 @@
 <!doctype html>
 <html>
 <head>
-    	<meta charset="utf-8" />
-      <link rel="stylesheet" href="stylesheet.css" />
-      <script type="text/javascript" src="http://code.jquery.com/jquery-3.2.1.min.js"></script>
+  <meta charset="utf-8" />
+  <title>Playerlist - Webinterface</title>
+  <link rel="stylesheet" href="stylesheet.css" />
+  <script type="text/javascript" src="http://code.jquery.com/jquery-3.2.1.min.js"></script>
 </head>
 <body>
   <nav>
@@ -18,10 +19,9 @@
   <div class="content">
     <h1>Spieler</h1>
     <section id="players">
+      <input type="button" class="small" value="Refresh" id="refresh" />
       <table border="0">
-        <tbody>
-          %player_list%
-        </tbody>
+        <section id="list"></section>
       </table>
     </section>
 
@@ -29,6 +29,17 @@
   </div>
 
   <script>
+    $(document).ready(function() {
+      $("#list").load("playerlist.html");
+      setInterval(function() {
+        $("#list").load("playerlist.html");
+      }, 10000);
+    });
+
+    $("#refresh").click(function() {
+      $("#list").load("playerlist.html");
+    });
+
     function sendCommand(command) {
       $("#action").load("console_send?" + command.replace(" ", "%20"));
     }
