--- a/WebConnector/webpages/accounts.html
+++ b/WebConnector/webpages/accounts.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8"/>
 	<title>Accounts - Webinterface</title>
-	<link rel="stylesheet" href="stylesheet.css"/>
+	<link rel="stylesheet" href="CSS/stylesheet.css"/>
   <script type="text/javascript" src="http://code.jquery.com/jquery-3.2.1.min.js"></script>
 </head>
 <body>
