--- a/WebConnector/webpages/index.html
+++ b/WebConnector/webpages/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8"/>
 	<title>Home - Webinterface</title>
-	<link rel="stylesheet" href="stylesheet.css"/>
+	<link rel="stylesheet" href="CSS/stylesheet.css"/>
 </head>
 <body>
 	<nav>
